# argon-one

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  hacs.json  mypy.ini  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml  testing_request.yml
.github/scripts/: build-release-zip  bump-version  extract-changelog
.github/workflows/: bump.yml  lint.yml  release.yml  tag.yml  test.yml
config/: configuration.yaml
custom_components/argon_one/: __init__.py  config_flow.py  const.py  fan.py  manifest.json  switch.py
custom_components/argon_one/translations/: en.json
scripts/: deploy  develop  setup  test
testing/mock_smbus2/: smbus2.py
tests/: conftest.py  test_compute_speed.py  test_config_flow.py  test_fan.py  test_init.py  test_options_flow.py  test_switch.py
